[tool.poetry]
name = "module07"
version = "0.1.0"
description = "Module 07"
authors = ["777fesenko.d@gmail.com"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
faker = "^19.3.1"
alembic = "^1.12.0"
